force-app/main/default/objects/custom_create152__c/custom_create152__c.object-meta.xml
<CustomObject>
    <label>Custom created object152</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects152</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>