force-app/main/default/objects/custom_create152__c/fields/custom_create_152field580__c.field-meta.xml
<CustomField>
    <fullName>custom_create_152field580__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 152field580</label>
    <type>Checkbox</type>
</CustomField>